--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -10,7 +10,7 @@ app-mainmenu{
 		background:#EFF0F1;
 		width:55px;
     	z-index: 9;
-    	height: calc(100% - 55px);
+    	height: calc(100% - 60px);
 		transition: .33s;
 		overflow: hidden;		
 		&.activeMenu{
@@ -18,6 +18,9 @@ app-mainmenu{
 			transition: 0.33s;	
 			z-index: 2;
 			.perfect-scroll{
+				&.if-upgrade-plan{
+					height: calc(100% - 162px);
+				}
 				.list-group{
 					padding: 10px 20px;
 					.sources-block-nav-items{
@@ -359,4 +362,39 @@ app-mainmenu{
 		opacity: 0.95;
 		padding-left: 7% !important;
 	}
+}
+
+
+.upgrade_your_plan_price{
+	margin: 22px 14px 0px 14px;
+	.upgrade-plan-btn{
+		background: linear-gradient(180deg, rgba(221, 54, 70, 0.3) 0%, rgba(255, 255, 255, 0) 100%), rgba(112, 39, 229, 0.8);
+		box-shadow: 0px 0px 5px rgb(13 110 253 / 20%);
+		border-radius: 4px;
+		height: 50px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: #F8F9FA;
+		font-weight: normal;
+		font-size: 14px;
+		line-height: 20px;
+		margin-bottom: 5px;
+		img{
+			margin-left: 5px;
+		}
+	}
+	.document-limit{
+		background: #FFFFFF;
+		height: 34px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: #5F6368;
+		font-weight: 500;
+		font-size: 12px;
+		line-height: 20px;
+		margin-bottom: 5px;
+	}
+
 }
