updated invoice UI styles

--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -1,1 +1,17 @@
-<p>usage-log works!</p>
+<div class="usage-log-container">
+    <div class="header-sec">
+        <div class="title">Usage Log</div>
+        <div class="d-flex align-items-center">
+            <div class="kr-sg-input-search">
+                <input type="text" placeholder="Search" class="input-search"  autocomplete="off">
+                <img src="assets/icons/search_gray.svg" class="search-icon">               
+            </div>           
+            <div class="seach-block">
+                <img src="assets/icons/search.svg">{{'search' | translate}}             
+            </div> 
+            <div class="download-icon">
+                <img src="assets/icons/usage-log/download.svg">
+            </div>           
+        </div>
+    </div>
+</div>
