--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -286,7 +286,7 @@
 					<img src="assets/icons/sidemenu/new-icons/usagelog.svg" class="defaultIcon">
 					<img src="assets/icons/sidemenu/new-icons/usagelog.svg" class="activeIcon">
 				</span>
-				<span class="linkTitle">Usage LOg</span>
+				<span class="linkTitle">Usage Log</span>
 			</div>
 			<div mat-button class="mat-button" [routerLink]="['/invoices']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
 				<span class="inlineIconBox">
