--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -766,7 +766,7 @@
                                         width: auto;
                                     }
                                     .right-content{
-                                        max-width: 80%;
+                                        // max-width: 86%;
                                         position: relative;
                                         &.if-lenthfour{
                                             &::before{
@@ -776,34 +776,45 @@
                                             }
                                         }                                        
                                         .added-conditions{
-                                            display: flex;
+                                            display: block;
                                             align-items: center;
                                             padding-left: 10px;
-                                            margin-bottom: 10px;
+                                            // margin-bottom: 10px;
                                             position: relative;                                            
                                             &:last-child{
                                                 margin: 0;
+                                            }
+                                            .vertical-align-top{
+                                                vertical-align: top;
+                                            }
+                                            .pr-10{
+                                                padding-right: 10px;
+                                            }
+                                            .pr-20{
+                                                padding-right: 20px;
                                             }
                                             .rule-title{
                                                 color: #9AA0A6;
                                                 font-weight: 500;
                                                 font-size: 12px;
                                                 line-height: 14px;
+                                                display: inline;
                                             }
                                             .rule-dropdown-data{
                                                 border: 1px solid #BDC1C6;
                                                 box-sizing: border-box;
                                                 border-radius: 4px;
-                                                padding: 2px 6px;
+                                                padding: 1px 6px;
                                                 height: 16px;
-                                                display: flex;
+                                                display: inline-block;
                                                 align-items: center;
-                                                margin: 0 12px 0 9px;
-                                                overflow: hidden;
-                                                text-overflow: ellipsis;
-                                                white-space: nowrap;
-                                                max-width: 140px;
-                                                flex-shrink: 0;
+                                                margin: 0 12px 0 4px;
+                                                line-height: 4px;
+                                                // overflow: hidden;
+                                                // text-overflow: ellipsis;
+                                                // white-space: nowrap;
+                                                // max-width: 140px;
+                                                // flex-shrink: 0;
                                                 .rule-dropdown-key{
                                                     color: #BDC1C6;
                                                     font-weight: 500;
@@ -825,6 +836,8 @@
                                                 font-weight: 500;
                                                 font-size: 12px;
                                                 line-height: 14px;
+                                                display: inline-block;
+                                                margin-bottom: 10px;
                                             }
                                             .rule-value{
                                                 color: #5F6368;
@@ -837,8 +850,10 @@
                                                 height: 16px;
                                                 padding: 1px 6px;
                                                 margin: 0 4px;
-                                                max-width: 90px;
-                                                flex-shrink: 0;
+                                                // max-width: 90px;
+                                                // flex-shrink: 0;
+                                                display: inline-block;
+                                                vertical-align: middle;
                                             }
                                             .or-rule{
                                                 color: #9AA0A6;
@@ -846,6 +861,7 @@
                                                 font-size: 10px;
                                                 line-height: 12px;
                                                 text-transform: uppercase;
+                                                display: inline;
                                             }
                                         }
                                     }                                    
@@ -1600,4 +1616,10 @@
 }
 .blur-content{
     opacity: 0.01;
+}
+.see-all-anchor{
+    font-size: 12px; 
+    line-height: 14.52px;
+    margin-left: 45px;
+
 }
