--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -91,7 +91,7 @@
                     <button placement="bottom" #testButtonTooltip="ngbTooltip" ngbTooltip="Preview & Customize search results." container='body' tooltipClass="test-icon-tooltip" class="kr-sg-button-secondary btn_lg rr-tour-test-btn" id="test-btn-launch-sdk" (click)="openOrCloseSearchSDK()">Test</button>
                 </li>
                 <li class="nav-item train-btn" ngbTooltip="Train your App" container='body' tooltipClass="train-icon-tooltip">
-                    <img src="assets/icons/train.svg" class="defaultIcon" (click)="train()">
+                    <img src="assets/icons/train.svg" class="defaultIcon" id="trainId" (click)="train()">
                 </li>
                 <li class="nav-item search-block">
                     <div class="search_icon" [ngClass]="{'active-search-top' : showSearch}">
