thumbs up and thumbs down removed in faqs and analystics code changes

--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -337,7 +337,7 @@
                         <div class="text-center">{{'metrics.dash_board_view.Number_of_Clicks'| translate}}</div>
                     </div>
                 </div>
-                <div class="col-6 box-content">
+                <!-- <div class="col-6 box-content">
                     <div class="full-card pb-4">
                         <div class="title-card">{{'metrics.dash_board_view.Feedback'| translate}}</div>
                         <div class="row col-12 m-0 p-0">
@@ -367,7 +367,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- <div *ngIf="slider === 2">
