--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -465,12 +465,12 @@
                                                             <div class="count-sec">
                                                                 <img src="assets/icons/faq/hand.svg">{{selectedFaq.stats.clicks ||0}}
                                                             </div>
-                                                            <div class="count-sec">
+                                                            <!-- <div class="count-sec">
                                                                 <img src="assets/icons/faq/likes.svg">{{selectedFaq.stats.thumbsup ||0}}
                                                             </div>
                                                             <div class="count-sec">
                                                                 <img src="assets/icons/faq/dislikes.svg">{{selectedFaq.stats.thumbsdown ||0}}
-                                                            </div>                                                        
+                                                            </div>                                                         -->
                                                         </div>
                                                     </div>
 
@@ -497,12 +497,12 @@
                                                         <div class="count-sec">
                                                             <img src="assets/icons/faq/hand.svg">{{selectedFaq.stats.clicks ||0}}
                                                         </div>
-                                                        <div class="count-sec">
+                                                        <!-- <div class="count-sec">
                                                             <img src="assets/icons/faq/likes.svg">{{selectedFaq.stats.thumbsup ||0}}
                                                         </div>
                                                         <div class="count-sec">
                                                             <img src="assets/icons/faq/dislikes.svg">{{selectedFaq.stats.thumbsdown ||0}}
-                                                        </div>                                                           
+                                                        </div>                                                            -->
                                                     </div>
                                                     <div class="d-flex col-12 conditions-response-block">
                                                         <div class="title col-2 px-0">Conditions :</div>
@@ -564,14 +564,14 @@
                                         <span class="source">Clicks:</span>
                                         <span class="count">{{selectedFaq.feedback.click}}</span>
                                     </div>
-                                    <div class="col-2 p-0">
+                                    <!-- <div class="col-2 p-0">
                                         <span class="source cursor-pointer"><img src="assets/icons/like.svg"></span>
                                         <span class="count">{{selectedFaq.feedback.thumbsup}}</span>
                                     </div>
                                     <div class="col-3 p-0">
                                         <span class="sourc cursor-pointer"><img src="assets/icons/dislike.svg"></span>
                                         <span class="count">{{selectedFaq.feedback.thumbsdown}}</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="add-alternative-questions row bg-white">
