--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -64,8 +64,8 @@
                         <div class="col-1 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.No_of_Clicks'| translate}}</div>
                         <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.Click-Through_Rate'| translate}}</div>
                         <div class="col-1 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Avg_Position'| translate}}</span></div>
-                        <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Positive_Feedback'| translate}}</span></div>
-                        <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div>
+                        <!-- <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Positive_Feedback'| translate}}</span></div>
+                        <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div> -->
                     </div>
                     <div class="table_body row m-0" *ngFor="let result of resultsData | filter: [ searchSources , 'answer']">
                         <div class="col-2 title d-flex align-items-center">
@@ -78,14 +78,14 @@
                         <div class="col-1 title">{{result.clicks}}</div>
                         <div class="col-2 title">{{result.clickThroughRate | number : '1.2-2'}}%</div>
                         <div class="col-1 title data-overview">{{result.avgPosition | number : '1.2-2'}}</div>
-                        <div class="col-2 title">{{result.positiveFeedback}}</div>                       
+                        <!-- <div class="col-2 title">{{result.positiveFeedback}}</div>                       
                         <div class="col-2 title d-flex align-items-center justify-content-between">
                             <span class="count">{{result.negativeFeedback}}</span>
                             <div class="view-query" (click)="openModalPopup(result)">
                                 <img src="assets/icons/view-query.svg">    
                                 <span>View Queries</span>                           
                             </div>
-                        </div>
+                        </div> -->
                     </div>    
                     
                 </div>
@@ -114,8 +114,8 @@
                 <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.No_of_Clicks'| translate}}</div>
                 <div class="col-2 title"><img src="assets/icons/sort_up_down.svg" class="mr-1">{{'metrics.result_insights.Click-Through_Rate'| translate}}</div>
                 <div class="col-2 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Avg_Position'| translate}}</span></div>
-                <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Positive_Feedback'| translate}}</span></div>
-                <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div>
+                <!-- <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Positive_Feedback'| translate}}</span></div>
+                <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>{{'metrics.result_insights.Negative_Feedback'| translate}}</span></div> -->
             </div>
             <div class="table_body row m-0" *ngFor="let result of resultsSearchData">
                 <div class="col-2 title d-flex align-items-center">
@@ -126,8 +126,8 @@
                 <div class="col-2 title">{{result.clicks}}</div>
                 <div class="col-2 title">{{result.clickThroughRate}}%</div>
                 <div class="col-2 title data-overview">{{result.avgPosition}}</div>
-                <div class="col-1 title">{{result.positiveFeedback}}</div>                       
-                <div class="col-1 title">{{result.negativeFeedback}}</div>
+                <!-- <div class="col-1 title">{{result.positiveFeedback}}</div>                       
+                <div class="col-1 title">{{result.negativeFeedback}}</div> -->
             </div>                   
         </div>
         <span *ngIf='Q_totalRecord'><app-record-pagination [totalRecord]='Q_totalRecord' [limitpage]='Q_limitPage' (pageChanged)="paginate($event,'QRESULT')"></app-record-pagination></span>
